# Game-of-life

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: build.yml  cmake-multi-platform.yml
saves/: gun.txt  save.txt
